--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Vaishnavi Travels & Self Drive Cars - Established 2012</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -30,18 +30,18 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero d-flex align-items-center text-white">
+    <section class="hero d-flex align-items-center text-white pt-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
                     <h1 class="display-4 fw-bold">Welcome to Vaishnavi Travels & Self Drive Cars</h1>
-                    <p class="lead">Established in 2012, we offer premium self-drive cars for your adventures. Freedom on the road, your way!</p>
+                    <p class="lead">Established in 2012, we offer premium self-drive cars for your adventures. Freedom on the road, your way! Explore our fleet including Ertiga, Thar, Innova Crysta, and Swift for comfortable journeys.</p>
                     <p><strong>Contact: <a href="tel:9676851772" class="text-white">9676851772</a></strong></p>
                     <a href="tariff.html" class="btn btn-primary btn-lg me-2">Explore Cars</a>
                     <a href="contact.html" class="btn btn-outline-light btn-lg">Get in Touch</a>
                 </div>
                 <div class="col-lg-6">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Toyota_Innova_Crysta_front_view.jpg/800px-Toyota_Innova_Crysta_front_view.jpg" alt="Self Drive Cars Fleet" class="img-fluid rounded shadow">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Toyota_Innova_Crysta_2.7_ZX_%28facelift%29_front_view_%28India%29.jpg/800px-Toyota_Innova_Crysta_2.7_ZX_%28facelift%29_front_view_%28India%29.jpg" alt="Self Drive Cars Fleet" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -77,41 +77,74 @@
             <div class="row">
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Maruti_Suzuki_Ertiga_front_view.jpg/800px-Maruti_Suzuki_Ertiga_front_view.jpg" class="card-img-top" alt="Maruti Ertiga">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/2022_Suzuki_Ertiga_%28Indonesia%29_front_view_01.jpg/800px-2022_Suzuki_Ertiga_%28Indonesia%29_front_view_01.jpg" class="card-img-top" alt="Maruti Ertiga">
                         <div class="card-body">
                             <h5 class="card-title">Maruti Ertiga</h5>
-                            <p class="card-text">7 Seater MPV</p>
+                            <p class="card-text">7 Seater MPV, ideal for family trips with ample space and comfort.</p>
                             <a href="tariff.html" class="btn btn-primary">View Details</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Mahindra_Thar_front.jpg/800px-Mahindra_Thar_front.jpg" class="card-img-top" alt="Mahindra Thar">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Mahindra_Thar_2020_front_view.jpg/800px-Mahindra_Thar_2020_front_view.jpg" class="card-img-top" alt="Mahindra Thar">
                         <div class="card-body">
                             <h5 class="card-title">Mahindra Thar</h5>
-                            <p class="card-text">Off-road SUV</p>
+                            <p class="card-text">Off-road SUV, perfect for adventurous terrains and rugged drives.</p>
                             <a href="tariff.html" class="btn btn-primary">View Details</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Toyota_Innova_front_20070313.jpg/800px-Toyota_Innova_front_20070313.jpg" class="card-img-top" alt="Toyota Innova Crysta">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Toyota_Innova_Crysta_2.7_ZX_%28facelift%29_front_view_%28India%29.jpg/800px-Toyota_Innova_Crysta_2.7_ZX_%28facelift%29_front_view_%28India%29.jpg" class="card-img-top" alt="Toyota Innova Crysta">
                         <div class="card-body">
                             <h5 class="card-title">Toyota Innova Crysta</h5>
-                            <p class="card-text">Premium 7 Seater</p>
+                            <p class="card-text">Premium 7 Seater, luxurious and reliable for long journeys.</p>
                             <a href="tariff.html" class="btn btn-primary">View Details</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Maruti_Suzuki_Swift_front.jpg/800px-Maruti_Suzuki_Swift_front.jpg" class="card-img-top" alt="Maruti Swift">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/2024_Suzuki_Swift_%28Chile%29_front_view_02.jpg/800px-2024_Suzuki_Swift_%28Chile%29_front_view_02.jpg" class="card-img-top" alt="Maruti Swift">
                         <div class="card-body">
                             <h5 class="card-title">Maruti Swift</h5>
-                            <p class="card-text">Compact Hatchback</p>
+                            <p class="card-text">Compact Hatchback, efficient and agile for city driving.</p>
                             <a href="tariff.html" class="btn btn-primary">View Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials -->
+    <section class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">What Our Customers Say</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <p>"Great experience with the Thar for our off-road trip! Smooth booking."</p>
+                            <p>- Rajesh K.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <p>"Innova Crysta was perfect for family. Comfortable and reliable."</p>
+                            <p>- Priya S.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <p>"Affordable rates and excellent service. Will rent again!"</p>
+                            <p>- Anil M.</p>
                         </div>
                     </div>
                 </div>
@@ -129,6 +162,6 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
