--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Mahindra_Thar_2020_front_view.jpg/800px-Mahindra_Thar_2020_front_view.jpg" class="card-img-top" alt="Mahindra Thar">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Mahindra_Thar_Photoshoot_At_Perupalem_Beach_%28West_Godavari_District%2CAP%2CIndia_%29_Djdavid.jpg" class="card-img-top" alt="Mahindra Thar">
                         <div class="card-body">
                             <h5 class="card-title">Mahindra Thar</h5>
                             <p class="card-text">Off-road SUV, perfect for adventurous terrains and rugged drives.</p>
@@ -165,3 +165,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
