--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="contact.html" class="btn btn-outline-light btn-lg">Get in Touch</a>
                 </div>
                 <div class="col-lg-6">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Toyota_Innova_Crysta_2.7_ZX_%28facelift%29_front_view_%28India%29.jpg/800px-Toyota_Innova_Crysta_2.7_ZX_%28facelift%29_front_view_%28India%29.jpg" alt="Self Drive Cars Fleet" class="img-fluid rounded shadow">
+                    <img src="https://en.wikipedia.org/wiki/Toyota_Innova#/media/File:2021_Toyota_Kijang_Innova_2.0_V_Luxury_(front),_Citraland,_West_Surabaya.jpg" alt="Self Drive Cars Fleet" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
             <div class="row">
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/2022_Suzuki_Ertiga_%28Indonesia%29_front_view_01.jpg/800px-2022_Suzuki_Ertiga_%28Indonesia%29_front_view_01.jpg" class="card-img-top" alt="Maruti Ertiga">
+                        <img src="https://en.wikipedia.org/wiki/Suzuki_Ertiga#/media/File:2019_Suzuki_Ertiga_GX_(Indonesia)_front_view.jpg" class="card-img-top" alt="Maruti Ertiga">
                         <div class="card-body">
                             <h5 class="card-title">Maruti Ertiga</h5>
                             <p class="card-text">7 Seater MPV, ideal for family trips with ample space and comfort.</p>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Toyota_Innova_Crysta_2.7_ZX_%28facelift%29_front_view_%28India%29.jpg/800px-Toyota_Innova_Crysta_2.7_ZX_%28facelift%29_front_view_%28India%29.jpg" class="card-img-top" alt="Toyota Innova Crysta">
+                        <img src="https://en.wikipedia.org/wiki/Toyota_Innova#/media/File:2021_Toyota_Kijang_Innova_2.0_V_Luxury_(front),_Citraland,_West_Surabaya.jpg" class="card-img-top" alt="Toyota Innova Crysta">
                         <div class="card-body">
                             <h5 class="card-title">Toyota Innova Crysta</h5>
                             <p class="card-text">Premium 7 Seater, luxurious and reliable for long journeys.</p>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/2024_Suzuki_Swift_%28Chile%29_front_view_02.jpg/800px-2024_Suzuki_Swift_%28Chile%29_front_view_02.jpg" class="card-img-top" alt="Maruti Swift">
+                        <img src="https://en.wikipedia.org/wiki/Suzuki_Swift#/media/File:Suzuki_Swift_(2024)_hybrid_IMG_1869.jpg" class="card-img-top" alt="Maruti Swift">
                         <div class="card-body">
                             <h5 class="card-title">Maruti Swift</h5>
                             <p class="card-text">Compact Hatchback, efficient and agile for city driving.</p>
@@ -165,4 +165,5 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
