--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="contact.html" class="btn btn-outline-light btn-lg">Get in Touch</a>
                 </div>
                 <div class="col-lg-6">
-                    <img src="images/crysta.jpg" alt="Self Drive Cars Fleet" class="img-fluid rounded shadow">
+                    <img src="crysta.jpg" alt="Self Drive Cars Fleet" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
             <div class="row">
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="images/ertiga.jpg" class="card-img-top" alt="Maruti Ertiga">
+                        <img src="ertiga.jpg" class="card-img-top" alt="Maruti Ertiga">
                         <div class="card-body">
                             <h5 class="card-title">Maruti Ertiga</h5>
                             <p class="card-text">7 Seater MPV, ideal for family trips with ample space and comfort.</p>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="images/Thar.jpg" class="card-img-top" alt="Mahindra Thar">
+                        <img src="Thar.jpg" class="card-img-top" alt="Mahindra Thar">
                         <div class="card-body">
                             <h5 class="card-title">Mahindra Thar</h5>
                             <p class="card-text">Off-road SUV, perfect for adventurous terrains and rugged drives.</p>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="images/crysta.jpg" class="card-img-top" alt="Toyota Innova Crysta">
+                        <img src="crysta.jpg" class="card-img-top" alt="Toyota Innova Crysta">
                         <div class="card-body">
                             <h5 class="card-title">Toyota Innova Crysta</h5>
                             <p class="card-text">Premium 7 Seater, luxurious and reliable for long journeys.</p>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="images/swift.jpg" class="card-img-top" alt="Maruti Swift">
+                        <img src="swift.jpg" class="card-img-top" alt="Maruti Swift">
                         <div class="card-body">
                             <h5 class="card-title">Maruti Swift</h5>
                             <p class="card-text">Compact Hatchback, efficient and agile for city driving.</p>
@@ -165,3 +165,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
