--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="contact.html" class="btn btn-outline-light btn-lg">Get in Touch</a>
                 </div>
                 <div class="col-lg-6">
-                    <img src="crysta.jpg" alt="Self Drive Cars Fleet" class="img-fluid rounded shadow">
+                    <img src=""https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Toyota_Innova_Crysta_2.7_ZX_%28facelift%29_front_view_%28India%29.jpg/800px-Toyota_Innova_Crysta_2.7_ZX_%28facelift%29_front_view_%28India%29.jpg" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -165,4 +165,5 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
