--- a/index.html
+++ b/index.html
@@ -33,15 +33,12 @@
     <section class="hero d-flex align-items-center text-white pt-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                     <h1 class="display-4 fw-bold">Welcome to Vaishnavi Travels & Self Drive Cars</h1>
                     <p class="lead">Established in 2012, we offer premium self-drive cars for your adventures. Freedom on the road, your way! Explore our fleet including Ertiga, Thar, Innova Crysta, and Swift for comfortable journeys.</p>
                     <p><strong>Contact: <a href="tel:9676851772" class="text-white">9676851772</a></strong></p>
                     <a href="tariff.html" class="btn btn-primary btn-lg me-2">Explore Cars</a>
                     <a href="contact.html" class="btn btn-outline-light btn-lg">Get in Touch</a>
-                </div>
-                <div class="col-lg-6">
-                    <img src=""https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Toyota_Innova_Crysta_2.7_ZX_%28facelift%29_front_view_%28India%29.jpg/800px-Toyota_Innova_Crysta_2.7_ZX_%28facelift%29_front_view_%28India%29.jpg" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -77,7 +74,7 @@
             <div class="row">
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="ertiga.jpg" class="card-img-top" alt="Maruti Ertiga">
+                        <img src="images/ertiga.jpg" class="card-img-top" alt="Maruti Ertiga">
                         <div class="card-body">
                             <h5 class="card-title">Maruti Ertiga</h5>
                             <p class="card-text">7 Seater MPV, ideal for family trips with ample space and comfort.</p>
@@ -87,7 +84,7 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="Thar.jpg" class="card-img-top" alt="Mahindra Thar">
+                        <img src="images/Thar.jpg" class="card-img-top" alt="Mahindra Thar">
                         <div class="card-body">
                             <h5 class="card-title">Mahindra Thar</h5>
                             <p class="card-text">Off-road SUV, perfect for adventurous terrains and rugged drives.</p>
@@ -97,7 +94,7 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="crysta.jpg" class="card-img-top" alt="Toyota Innova Crysta">
+                        <img src="images/crysta.jpg" class="card-img-top" alt="Toyota Innova Crysta">
                         <div class="card-body">
                             <h5 class="card-title">Toyota Innova Crysta</h5>
                             <p class="card-text">Premium 7 Seater, luxurious and reliable for long journeys.</p>
@@ -107,7 +104,7 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="swift.jpg" class="card-img-top" alt="Maruti Swift">
+                        <img src="images/swift.jpg" class="card-img-top" alt="Maruti Swift">
                         <div class="card-body">
                             <h5 class="card-title">Maruti Swift</h5>
                             <p class="card-text">Compact Hatchback, efficient and agile for city driving.</p>
@@ -165,5 +162,3 @@
     <script src="js/script.js"></script>
 </body>
 </html>
-
-
