--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <!-- Navigation (active on Contact) -->
+<body class="bg-travel">
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <!-- Copy nav, active on Contact -->
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">Vaishnavi Travels</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -46,10 +45,11 @@
                     <p>Phone: <a href="tel:9676851772">9676851772</a></p>
                     <p>Email: vaishnavitravels@gmail.com (placeholder - update with real)</p>
                     <p>Established: 2012</p>
+                    <h4>Address</h4>
+                    <p>Located in: Chaitanyapuri-Prashanth Nagar Park<br>Address: Prashanthnagar Colony, Hanamkonda, Telangana 506004</p>
                 </div>
                 <div class="col-md-6">
-                    <!-- Working Contact Form -->
-                    <form id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST"> <!-- Replace YOUR_FORM_ID with your Formspree ID -->
+                    <form id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
                         <div class="mb-3">
                             <label for="name" class="form-label">Name</label>
                             <input type="text" class="form-control" id="name" name="name" required>
