--- a/packages.html
+++ b/packages.html
@@ -8,10 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <!-- Navigation (active on Packages) -->
+<body class="bg-travel">
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <!-- Copy nav, active on Packages -->
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">Vaishnavi Travels</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -33,8 +32,8 @@
     <!-- Packages Hero -->
     <section class="py-5 bg-light">
         <div class="container">
-            <h1 class="text-center">Tour Packages</h1>
-            <p class="text-center lead">Curated self-drive packages for unforgettable trips.</p>
+            <h1 class="text-center">Pilgrim Packages</h1>
+            <p class="text-center lead">Curated self-drive packages to sacred pilgrim places for spiritual journeys.</p>
         </div>
     </section>
 
@@ -44,31 +43,46 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&w=800" class="card-img-top" alt="Hill Station Package">
                         <div class="card-body">
-                            <h5>Weekend Hill Escape</h5>
-                            <p>3 Days, Innova Crysta, 300km, Rs 7500</p>
-                            <a href="tel:9676851772" class="btn btn-success">Book Package</a>
+                            <h5>Kanyakumari Pilgrimage</h5>
+                            <p>Visit the southern tip's temples and beaches.</p>
+                            <a href="tel:9676851772" class="btn btn-success">Book Now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="https://images.unsplash.com/photo-1530549387789-4c1017266635?ixlib=rb-4.0.3&w=800" class="card-img-top" alt="Beach Package">
                         <div class="card-body">
-                            <h5>Coastal Drive</h5>
-                            <p>5 Days, Ertiga, 500km, Rs 12000</p>
-                            <a href="tel:9676851772" class="btn btn-success">Book Package</a>
+                            <h5>Kashmir Pilgrimage</h5>
+                            <p>Explore spiritual sites in the valley of paradise.</p>
+                            <a href="tel:9676851772" class="btn btn-success">Book Now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&w=800" class="card-img-top" alt="Adventure Package">
                         <div class="card-body">
-                            <h5>Off-Road Adventure</h5>
-                            <p>4 Days, Thar, 400km, Rs 15000</p>
-                            <a href="tel:9676851772" class="btn btn-success">Book Package</a>
+                            <h5>Tirupati Pilgrimage</h5>
+                            <p>Darshan at the famous Venkateswara Temple.</p>
+                            <a href="tel:9676851772" class="btn btn-success">Book Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5>Vaishno Devi Pilgrimage</h5>
+                            <p>Trek to the holy cave shrine in the hills.</p>
+                            <a href="tel:9676851772" class="btn btn-success">Book Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5>Rameswaram Pilgrimage</h5>
+                            <p>Visit the Ramanathaswamy Temple and sacred sites.</p>
+                            <a href="tel:9676851772" class="btn btn-success">Book Now</a>
                         </div>
                     </div>
                 </div>
