--- a/tariff.html
+++ b/tariff.html
@@ -8,10 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <!-- Navigation (active on Tariff) -->
+<body class="bg-travel">
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <!-- Copy nav, active on Tariff -->
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">Vaishnavi Travels</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -34,7 +33,7 @@
     <section class="py-5 bg-light">
         <div class="container">
             <h1 class="text-center">Tariff & Pricing</h1>
-            <p class="text-center lead">Transparent pricing for self-drive cars. Rates include basic insurance; extra km charged at Rs 10/km.</p>
+            <p class="text-center lead">Transparent pricing for self-drive cars. Rates include basic insurance; extra km charged at Rs 10/km. Flexible daily, weekly, monthly plans available.</p>
         </div>
     </section>
 
@@ -44,7 +43,7 @@
             <div class="row">
                 <div class="col-md-6 mb-4">
                     <div class="card">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Maruti_Suzuki_Ertiga_front_view.jpg/800px-Maruti_Suzuki_Ertiga_front_view.jpg" class="card-img-top" alt="Ertiga">
+                        <img src="ertiga.jpg" class="card-img-top" alt="Ertiga">
                         <div class="card-body">
                             <h5>Maruti Ertiga</h5>
                             <ul>
@@ -58,7 +57,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="card">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Mahindra_Thar_front.jpg/800px-Mahindra_Thar_front.jpg" class="card-img-top" alt="Thar">
+                        <img src="Thar.jpg" class="card-img-top" alt="Thar">
                         <div class="card-body">
                             <h5>Mahindra Thar</h5>
                             <ul>
@@ -72,7 +71,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="card">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/Toyota_Innova_front_20070313.jpg/800px-Toyota_Innova_front_20070313.jpg" class="card-img-top" alt="Innova Crysta">
+                        <img src="crysta.jpg" class="card-img-top" alt="Innova Crysta">
                         <div class="card-body">
                             <h5>Toyota Innova Crysta</h5>
                             <ul>
@@ -86,7 +85,7 @@
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="card">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Maruti_Suzuki_Swift_front.jpg/800px-Maruti_Suzuki_Swift_front.jpg" class="card-img-top" alt="Swift">
+                        <img src="swift.jpg" class="card-img-top" alt="Swift">
                         <div class="card-body">
                             <h5>Maruti Swift</h5>
                             <ul>
