--- a/services.html
+++ b/services.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <!-- Navigation (copy with active on Services) -->
+<body class="bg-travel">
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">Vaishnavi Travels</a>
@@ -44,7 +44,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Self Drive Car Rental</h5>
-                            <p class="card-text">Rent cars for self-drive with flexible durations. No driver needed – just drive and explore!</p>
+                            <p class="card-text">Rent cars for self-drive with flexible durations. No driver needed – just drive and explore! Choose from our modern fleet for any occasion.</p>
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Airport Transfers</h5>
-                            <p class="card-text">Seamless pick-up and drop-off at airports with our comfortable fleet.</p>
+                            <p class="card-text">Seamless pick-up and drop-off at airports with our comfortable fleet. Reliable and punctual service for stress-free travel.</p>
                         </div>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Long Distance Tours</h5>
-                            <p class="card-text">Plan your road trips with unlimited km options and GPS guidance.</p>
+                            <p class="card-text">Plan your road trips with unlimited km options and GPS guidance. Enjoy scenic drives with our fuel-efficient vehicles.</p>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Event Cars</h5>
-                            <p class="card-text">Luxury cars for weddings, corporate events, and special occasions.</p>
+                            <p class="card-text">Luxury cars for weddings, corporate events, and special occasions. Make your event memorable with our premium fleet.</p>
                         </div>
                     </div>
                 </div>
@@ -86,7 +86,36 @@
                             <div class="accordion-body">Valid driving license, Aadhaar/PAN, and deposit.</div>
                         </div>
                     </div>
-                    <!-- Add more FAQs as needed -->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2">
+                                Can I extend the rental period?
+                            </button>
+                        </h2>
+                        <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body">Yes, subject to availability. Contact us 24 hours in advance.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3">
+                                What if there's a breakdown?
+                            </button>
+                        </h2>
+                        <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body">24/7 roadside assistance is provided. Call our helpline.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4">
+                                Are pets allowed in cars?
+                            </button>
+                        </h2>
+                        <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body">No, to maintain cleanliness for all customers.</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
