--- a/about.html
+++ b/about.html
@@ -8,10 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <!-- Navigation (same as index) -->
+<body class="bg-travel">
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <!-- Copy from index.html -->
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">Vaishnavi Travels</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -41,18 +40,18 @@
     <section class="py-5">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
-                    <p class="lead">Founded in 2012, Vaishnavi Travels & Self Drive Cars has been a trusted name in the travel industry, specializing in hassle-free self-drive rentals. Our mission is to empower travelers with the freedom to explore at their own pace, with a fleet of well-maintained vehicles and 24/7 support.</p>
-                    <p>We started with a small fleet and have grown to serve thousands of customers across India. Our commitment to safety, cleanliness, and customer satisfaction sets us apart. Whether it's a family road trip or a solo adventure, we're here to make your journey memorable.</p>
+                <div class="col-lg-12">
+                    <p class="lead">Founded in 2012, Vaishnavi Travels & Self Drive Cars has been a trusted name in the travel industry, specializing in hassle-free self-drive rentals. Our mission is to empower travelers with the freedom to explore at their own pace, with a fleet of well-maintained vehicles and 24/7 support. We prioritize customer safety, comfort, and satisfaction in every journey.</p>
+                    <p>We started with a small fleet and have grown to serve thousands of customers across India. Our commitment to safety, cleanliness, and customer satisfaction sets us apart. Whether it's a family road trip, business travel, or a solo adventure, we're here to make your journey memorable. With modern vehicles like Ertiga for families, Thar for adventures, Innova Crysta for luxury, and Swift for city drives, we cater to all needs.</p>
                     <h3>Our Values</h3>
                     <ul>
-                        <li>Reliability: On-time delivery and pick-up.</li>
-                        <li>Affordability: Competitive tariffs with no hidden fees.</li>
-                        <li>Safety: All cars insured and serviced regularly.</li>
+                        <li>Reliability: On-time delivery and pick-up with fully serviced cars.</li>
+                        <li>Affordability: Competitive tariffs with no hidden fees and flexible plans.</li>
+                        <li>Safety: All cars insured, regularly serviced, and equipped with safety features.</li>
+                        <li>Customer Focus: 24/7 support, easy booking, and personalized service.</li>
                     </ul>
-                </div>
-                <div class="col-lg-4">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Mahindra_Thar_front.jpg/800px-Mahindra_Thar_front.jpg" alt="Our Team" class="img-fluid rounded">
+                    <h3>Our Location</h3>
+                    <p>Located in: Chaitanyapuri-Prashanth Nagar Park<br>Address: Prashanthnagar Colony, Hanamkonda, Telangana 506004</p>
                 </div>
             </div>
         </div>
