--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">Vaishnavi Travels</a>
+            <a class="navbar-brand fw-bold" href="index.html">VAISHNAVI TRAVELS & SELF DRIVE CARS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -74,7 +74,7 @@
             <div class="row">
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="images/ertiga.jpg" class="card-img-top" alt="Maruti Ertiga">
+                        <img src="ertiga.jpg" class="card-img-top" alt="Maruti Ertiga">
                         <div class="card-body">
                             <h5 class="card-title">Maruti Ertiga</h5>
                             <p class="card-text">7 Seater MPV, ideal for family trips with ample space and comfort.</p>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="images/Thar.jpg" class="card-img-top" alt="Mahindra Thar">
+                        <img src="Thar.jpg" class="card-img-top" alt="Mahindra Thar">
                         <div class="card-body">
                             <h5 class="card-title">Mahindra Thar</h5>
                             <p class="card-text">Off-road SUV, perfect for adventurous terrains and rugged drives.</p>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="images/crysta.jpg" class="card-img-top" alt="Toyota Innova Crysta">
+                        <img src="crysta.jpg" class="card-img-top" alt="Toyota Innova Crysta">
                         <div class="card-body">
                             <h5 class="card-title">Toyota Innova Crysta</h5>
                             <p class="card-text">Premium 7 Seater, luxurious and reliable for long journeys.</p>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-md-3 mb-4">
                     <div class="card h-100">
-                        <img src="images/swift.jpg" class="card-img-top" alt="Maruti Swift">
+                        <img src="swift.jpg" class="card-img-top" alt="Maruti Swift">
                         <div class="card-body">
                             <h5 class="card-title">Maruti Swift</h5>
                             <p class="card-text">Compact Hatchback, efficient and agile for city driving.</p>
