--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">VAISHNAVI TRAVELS & SELF DRIVE CARS</a>
+            <a class="navbar-brand fw-bold" href="index.html">Vaishnavi Travels</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
