--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">Vaishnavi Travels</a>
+            <a class="navbar-brand fw-bold" href="index.html">VAISHNAVI TRAVELS & SELF DRIVE CARS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -30,15 +30,15 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero d-flex align-items-center text-white pt-5">
+    <section class="hero d-flex align-items-center text-dark pt-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="display-4 fw-bold">Welcome to Vaishnavi Travels & Self Drive Cars</h1>
                     <p class="lead">Established in 2012, we offer premium self-drive cars for your adventures. Freedom on the road, your way! Explore our fleet including Ertiga, Thar, Innova Crysta, and Swift for comfortable journeys.</p>
-                    <p><strong>Contact: <a href="tel:9676851772" class="text-white">9676851772</a></strong></p>
+                    <p><strong>Contact: <a href="tel:9676851772" class="text-dark">9676851772</a></strong></p>
                     <a href="tariff.html" class="btn btn-primary btn-lg me-2">Explore Cars</a>
-                    <a href="contact.html" class="btn btn-outline-light btn-lg">Get in Touch</a>
+                    <a href="contact.html" class="btn btn-outline-dark btn-lg">Get in Touch</a>
                 </div>
             </div>
         </div>
